src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) cv::Scalar cv_sum_0(void* src);
extern "C" __declspec(dllexport) bool cv_hasNonZero_0(void* src);
extern "C" __declspec(dllexport) int cv_countNonZero_0(void* src);
extern "C" __declspec(dllexport) void cv_findNonZero_0(void* src, void* idx);
extern "C" __declspec(dllexport) cv::Scalar cv_mean_0(void* src, void* mask);
extern "C" __declspec(dllexport) void cv_meanStdDev_0(void* src, void* mean, void* stddev, void* mask);
extern "C" __declspec(dllexport) double cv_norm_0(void* src1, int normType, void* mask);
extern "C" __declspec(dllexport) double cv_norm_1(void* src1, void* src2, int normType, void* mask);
extern "C" __declspec(dllexport) double cv_PSNR_0(void* src1, void* src2, double R);
extern "C" __declspec(dllexport) void cv_batchDistance_0(void* src1, void* src2, void* dist, int dtype, void* nidx, int normType, int K, void* mask, int update, bool crosscheck);
extern "C" __declspec(dllexport) void cv_normalize_0(void* src, void* dst, double alpha, double beta, int norm_type, int dtype, void* mask);
extern "C" __declspec(dllexport) void cv_minMaxLoc_0(void* src, void* minVal, void* maxVal, void* minLoc, void* maxLoc, void* mask);
extern "C" __declspec(dllexport) void cv_reduceArgMin_0(void* src, void* dst, int axis, bool lastIndex);
extern "C" __declspec(dllexport) void cv_reduceArgMax_0(void* src, void* dst, int axis, bool lastIndex);
extern "C" __declspec(dllexport) void cv_reduce_0(void* src, void* dst, int dim, int rtype, int dtype);
extern "C" __declspec(dllexport) void cv_merge_0(void* mv, void* dst);
extern "C" __declspec(dllexport) void cv_split_0(void* m, void* mv);
extern "C" __declspec(dllexport) void cv_mixChannels_0(void* src, void* dst, void* fromTo);
extern "C" __declspec(dllexport) void cv_extractChannel_0(void* src, void* dst, int coi);
extern "C" __declspec(dllexport) void cv_insertChannel_0(void* src, void* dst, int coi);
extern "C" __declspec(dllexport) void cv_flip_0(void* src, void* dst, int flipCode);
extern "C" __declspec(dllexport) void cv_flipND_0(void* src, void* dst, int axis);
extern "C" __declspec(dllexport) void cv_broadcast_0(void* src, void* shape, void* dst);
extern "C" __declspec(dllexport) void cv_rotate_0(void* src, void* dst, int rotateCode);
extern "C" __declspec(dllexport) void cv_repeat_0(void* src, int ny, int nx, void* dst);
extern "C" __declspec(dllexport) void cv_hconcat_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_vconcat_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_bitwise_and_0(void* src1, void* src2, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_bitwise_or_0(void* src1, void* src2, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_bitwise_xor_0(void* src1, void* src2, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_bitwise_not_0(void* src, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_absdiff_0(void* src1, void* src2, void* dst);
extern "C" __declspec(dllexport) void cv_copyTo_0(void* src, void* dst, void* mask);
extern "C" __declspec(dllexport) void cv_inRange_0(void* src, void* lowerb, void* upperb, void* dst);
extern "C" __declspec(dllexport) void cv_compare_0(void* src1, void* src2, void* dst, int cmpop);
extern "C" __declspec(dllexport) void cv_min_0(void* src1, void* src2, void* dst);
extern "C" __declspec(dllexport) void cv_max_0(void* src1, void* src2, void* dst);
extern "C" __declspec(dllexport) void cv_sqrt_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_pow_0(void* src, double power, void* dst);
extern "C" __declspec(dllexport) void cv_exp_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_log_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_polarToCart_0(void* magnitude, void* angle, void* x, void* y, bool angleInDegrees);
extern "C" __declspec(dllexport) void cv_cartToPolar_0(void* x, void* y, void* magnitude, void* angle, bool angleInDegrees);
extern "C" __declspec(dllexport) void cv_phase_0(void* x, void* y, void* angle, bool angleInDegrees);
extern "C" __declspec(dllexport) void cv_magnitude_0(void* x, void* y, void* magnitude);
extern "C" __declspec(dllexport) bool cv_checkRange_0(void* a, bool quiet, void* pos, double minVal, double maxVal);
extern "C" __declspec(dllexport) void cv_patchNaNs_0(void* a, double val);
extern "C" __declspec(dllexport) void cv_finiteMask_0(void* src, void* mask);
extern "C" __declspec(dllexport) void cv_gemm_0(void* src1, void* src2, double alpha, void* src3, double beta, void* dst, int flags);
extern "C" __declspec(dllexport) void cv_mulTransposed_0(void* src, void* dst, bool aTa, void* delta, double scale, int dtype);
extern "C" __declspec(dllexport) void cv_transpose_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_transposeND_0(void* src, void* order, void* dst);
extern "C" __declspec(dllexport) void cv_transform_0(void* src, void* dst, void* m);
extern "C" __declspec(dllexport) void cv_perspectiveTransform_0(void* src, void* dst, void* m);
extern "C" __declspec(dllexport) void cv_completeSymm_0(void* m, bool lowerToUpper);
extern "C" __declspec(dllexport) void cv_setIdentity_0(void* mtx, cv::Scalar s);
extern "C" __declspec(dllexport) double cv_determinant_0(void* mtx);
extern "C" __declspec(dllexport) cv::Scalar cv_trace_0(void* mtx);
extern "C" __declspec(dllexport) double cv_invert_0(void* src, void* dst, int flags);
extern "C" __declspec(dllexport) bool cv_solve_0(void* src1, void* src2, void* dst, int flags);
extern "C" __declspec(dllexport) void cv_sort_0(void* src, void* dst, int flags);
extern "C" __declspec(dllexport) void cv_sortIdx_0(void* src, void* dst, int flags);