src/OpenCV5Sharp/Generated/NativeMethods.Core.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar cv_sum_0(MatHandle src);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_hasNonZero_0(MatHandle src);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_countNonZero_0(MatHandle src);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_findNonZero_0(MatHandle src, MatHandle idx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar cv_mean_0(MatHandle src, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_meanStdDev_0(MatHandle src, MatHandle mean, MatHandle stddev, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_norm_0(MatHandle src1, int normType, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_norm_1(MatHandle src1, MatHandle src2, int normType, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_PSNR_0(MatHandle src1, MatHandle src2, double R);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_batchDistance_0(MatHandle src1, MatHandle src2, MatHandle dist, int dtype, MatHandle nidx, int normType, int K, IntPtr mask, int update, [MarshalAs(UnmanagedType.U1)] bool crosscheck);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_normalize_0(MatHandle src, MatHandle dst, double alpha, double beta, int norm_type, int dtype, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_minMaxLoc_0(MatHandle src, IntPtr minVal, IntPtr maxVal, IntPtr minLoc, IntPtr maxLoc, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_reduceArgMin_0(MatHandle src, MatHandle dst, int axis, [MarshalAs(UnmanagedType.U1)] bool lastIndex);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_reduceArgMax_0(MatHandle src, MatHandle dst, int axis, [MarshalAs(UnmanagedType.U1)] bool lastIndex);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_reduce_0(MatHandle src, MatHandle dst, int dim, int rtype, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_merge_0(IntPtr mv, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_split_0(MatHandle m, IntPtr mv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_mixChannels_0(IntPtr src, IntPtr dst, IntPtr fromTo);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_extractChannel_0(MatHandle src, MatHandle dst, int coi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_insertChannel_0(MatHandle src, MatHandle dst, int coi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_flip_0(MatHandle src, MatHandle dst, int flipCode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_flipND_0(MatHandle src, MatHandle dst, int axis);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_broadcast_0(MatHandle src, MatHandle shape, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_rotate_0(MatHandle src, MatHandle dst, int rotateCode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_repeat_0(MatHandle src, int ny, int nx, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_hconcat_0(IntPtr src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_vconcat_0(IntPtr src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_bitwise_and_0(MatHandle src1, MatHandle src2, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_bitwise_or_0(MatHandle src1, MatHandle src2, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_bitwise_xor_0(MatHandle src1, MatHandle src2, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_bitwise_not_0(MatHandle src, MatHandle dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_absdiff_0(MatHandle src1, MatHandle src2, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_copyTo_0(MatHandle src, MatHandle dst, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_inRange_0(MatHandle src, MatHandle lowerb, MatHandle upperb, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_compare_0(MatHandle src1, MatHandle src2, MatHandle dst, int cmpop);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_min_0(MatHandle src1, MatHandle src2, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_max_0(MatHandle src1, MatHandle src2, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_sqrt_0(MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_pow_0(MatHandle src, double power, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_exp_0(MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_log_0(MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_polarToCart_0(MatHandle magnitude, MatHandle angle, MatHandle x, MatHandle y, [MarshalAs(UnmanagedType.U1)] bool angleInDegrees);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cartToPolar_0(MatHandle x, MatHandle y, MatHandle magnitude, MatHandle angle, [MarshalAs(UnmanagedType.U1)] bool angleInDegrees);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_phase_0(MatHandle x, MatHandle y, MatHandle angle, [MarshalAs(UnmanagedType.U1)] bool angleInDegrees);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_magnitude_0(MatHandle x, MatHandle y, MatHandle magnitude);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_checkRange_0(MatHandle a, [MarshalAs(UnmanagedType.U1)] bool quiet, IntPtr pos, double minVal, double maxVal);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_patchNaNs_0(MatHandle a, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_finiteMask_0(MatHandle src, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_gemm_0(MatHandle src1, MatHandle src2, double alpha, MatHandle src3, double beta, MatHandle dst, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_mulTransposed_0(MatHandle src, MatHandle dst, [MarshalAs(UnmanagedType.U1)] bool aTa, IntPtr delta, double scale, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_transpose_0(MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_transposeND_0(MatHandle src, IntPtr order, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_transform_0(MatHandle src, MatHandle dst, MatHandle m);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_perspectiveTransform_0(MatHandle src, MatHandle dst, MatHandle m);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_completeSymm_0(MatHandle m, [MarshalAs(UnmanagedType.U1)] bool lowerToUpper);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_setIdentity_0(MatHandle mtx, Scalar s);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_determinant_0(MatHandle mtx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar cv_trace_0(MatHandle mtx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_invert_0(MatHandle src, MatHandle dst, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_solve_0(MatHandle src1, MatHandle src2, MatHandle dst, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_sort_0(MatHandle src, MatHandle dst, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_sortIdx_0(MatHandle src, MatHandle dst, int flags);
